corrected pom.xml